<resources>
    <string name="app_name">GraduationProject</string>
    <string name="home">HomeScreen</string>
    <string name="food_facts">Food Facts</string>
    <string name="ingredients">ingredients:</string>
    <string name="search_textview_default_message">Write a keyword in the search bar</string>
    <string name="search_textview_error_message">Error! Nothing found.</string>
    <string name="search_pokemon">Search eat</string>
    <string name="favorites_textview_message">Click on the heart-shaped icon on a Eat card to add it to your favorites!</string>
    <string name="day_callories">В сутки: </string>
    <string name="ignore">ignore</string>
    <string name="enter_search_word">Введите продукт</string>
    <string name="search_helper_text">введите название блюда</string>

    <string name="food">Food</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="favorites">Favorite</string>
    <string name="diary">Diary</string>

    //products label
    <string name="eggs">Eggs</string>
    <string name="fat">Fat</string>
    <string name="fish">Fish</string>
    <string name="chicken">Chicken</string>
    <string name="spicy">Spicy</string>
    <string name="sweet">Sweet</string>
    <string name="milk">Milk</string>
    <string name="all_types">All types</string>
    <string name="meat">Meat</string>

    <string name="protein_text">Белки:</string>
    <string name="fats_text">Жиры:</string>
    <string name="carbohydrates_text">Углеводы:</string>
    <string name="fiber">Клетчатка:</string>
    <string name="calories">Калории:</string>
    <string name="category_label">Название категории:</string>
    <string name="сategory">Категория:</string>
    <string name="Brand">Производитель:</string>
    <string name="serving_per_container">Подача:</string>
    <string name="food_contents_label">Состав:</string>
    <string name="EnergyCal">Cal</string>
    <string name="fat_result">fat</string>
    <string name="protein_result">prot</string>
    <string name="carbohydrate">carb</string>

    //строки для модального окна
    <string name="ok">Продолжить</string>
    <string name="info_app">Информация о проекте.</string>
    <string name="info_user">разработчик №1: Евгений разработчик №2: Андрей разработчик №3: Игорь разработчик №4: Константин разработчик №5: Иван разработчик №6: Татьяна </string>

    <string name="favorite_food_added">Продукт добавлен в избранное</string>
    <string name="favorite_food_delete">Продукт удален из избранного</string>
    <string name="diary_food_added">Продукт добавлен в ежедневник</string>
    <string name="diary_food_delete">Продукт удален из ежедневника</string>
    <string name="check_internet_connection">Проверьте подключение к интернету и попробуйте снова</string>
    <string name="error">Что-то пошло не так. Мы уже работаем над исправлением ошибки.</string>
    <string name="network_is_not_available">Отсутствует интернет-соединение</string>
    <string name="error_dialog_positive_button_ok">Ок</string>
</resources>