<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food.FoodFragment">

    <LinearLayout
        android:id="@+id/home_custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/custom_toolbar_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/food_facts"
            android:textColor="@color/primary"
            android:textSize="@dimen/info_text_size" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontal_chips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_custom_toolbar"
        android:fadingEdgeLength="@dimen/fadingEdgeLengthScroll"
        android:requiresFadingEdge="horizontal"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/types_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            app:checkedChip="@id/all_types_chip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/all_types_chip"
                style="@style/CustomChipStyle"
                android:text="@string/all_types" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="@string/meat" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="vegan" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="fat" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="milk" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="fish" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="chicken" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="spicy" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="flour" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:text="sweet" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sf_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontal_chips"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/marginBottomRV"
        android:clipToPadding="false"
        android:fadingEdgeLength="@dimen/fadingEdgeLength"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:requiresFadingEdge="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/item_fs_rv" />

    <LinearLayout
        android:id="@+id/no_internet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginBottomRV"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/paddingRV"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_connection_imageview"
            android:layout_width="@dimen/widthIV"
            android:layout_height="@dimen/heightIV"
            android:layout_gravity="center"
            android:src="@drawable/no_internet_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/check_internet_connection"
            android:textColor="@color/title_color"
            android:textSize="@dimen/info_text_size" />

    </LinearLayout>
</RelativeLayout>