<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:id="@+id/search_custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:textColor="@color/primary"
            android:textSize="@dimen/info_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/search_bar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_custom_toolbar"
        android:layout_margin="@dimen/layout_margin"
        android:background="@drawable/rounded_border_search_bar">

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:autofillHints=""
            android:background="@null"
            android:drawableStart="@drawable/search_icon_small"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/search_pokemon"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:paddingHorizontal="@dimen/paddingSearch"
            android:paddingVertical="@dimen/paddingSearch"
            android:textColor="@color/title_color"
            android:textSize="@dimen/standart_text_size"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/cancel_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/search_edittext"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|center_vertical"
            android:paddingHorizontal="@dimen/padding"
            android:paddingVertical="@dimen/padding"
            android:src="@drawable/cancel_icon_small"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_bar_linear_layout"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:clipToPadding="false"
        android:fadingEdgeLength="@dimen/fadingEdgeLength"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:requiresFadingEdge="vertical"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/empty_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginBottomRV"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/paddingRV"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/search_imageview"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/search_textview_default_message"
            android:textColor="@color/title_color"
            android:textSize="@dimen/info_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_results_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginBottomRV"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/paddingRV"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_results_imageview"
            android:layout_width="@dimen/widthIV"
            android:layout_height="@dimen/heightIV"
            android:layout_gravity="center"
            android:src="@drawable/search_not_found_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/search_textview_error_message"
            android:textColor="@color/title_color"
            android:textSize="@dimen/info_text_size" />
    </LinearLayout>
</RelativeLayout>