<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="8dp"
    android:paddingBottom="30dp"
    app:cardBackgroundColor="@color/bg_color"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <TextView
            android:id="@+id/protein"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/protein_text"
            app:layout_constraintBottom_toTopOf="@+id/fats"
            app:layout_constraintEnd_toStartOf="@+id/proteinCount"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fats"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fats_text"
            app:layout_constraintBottom_toTopOf="@+id/carbohydrates"
            app:layout_constraintEnd_toStartOf="@+id/fatsCount"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/protein" />

        <TextView
            android:id="@+id/carbohydrates"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrates_text"
            app:layout_constraintBottom_toBottomOf="@+id/barrier"
            app:layout_constraintEnd_toStartOf="@id/carbohydratesCount"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fats" />

        <TextView
            android:id="@+id/proteinCount"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/fatsCount"
            app:layout_constraintEnd_toStartOf="@+id/foodImage"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/protein"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="225" />

        <TextView
            android:id="@+id/fatsCount"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/carbohydratesCount"
            app:layout_constraintEnd_toStartOf="@+id/foodImage"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/fats"
            app:layout_constraintTop_toBottomOf="@+id/proteinCount"
            tools:text="24" />

        <TextView
            android:id="@+id/carbohydratesCount"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/barrier"
            app:layout_constraintEnd_toStartOf="@+id/foodImage"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/carbohydrates"
            app:layout_constraintTop_toBottomOf="@+id/fatsCount"
            tools:text="125" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="center" />

        <TextView
            android:id="@+id/label"
            style="@style/BaseTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toStartOf="@+id/foodImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="Hard-boiled Eggs" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:textColor="@color/text_color"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label"
            tools:text="meat food" />

        <ToggleButton
            android:id="@+id/favorite_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:checked="false"
            android:drawableBottom="@drawable/favorite_button_selector"
            android:drawablePadding="8dp"
            android:paddingHorizontal="8dp"
            android:paddingBottom="10dp"
            android:textSize="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/foodImage" />

        <ToggleButton
            android:id="@+id/diary_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:checked="false"
            android:drawableBottom="@drawable/add_button_selector"
            android:drawablePadding="8dp"
            android:paddingHorizontal="8dp"
            android:paddingBottom="10dp"
            android:textSize="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button" />

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/food" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>